[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Card.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Card" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
input_pickable = true
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="LeftColor" type="Sprite" parent="Sprite"]
position = Vector2( -24, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="RightColor" type="Sprite" parent="Sprite"]
position = Vector2( 24, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[connection signal="input_event" from="." to="." method="_on_Card_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
